font-size adjustment + update CV no span

--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -290,7 +290,7 @@ p.flags {
 
 .info {
   font-family: monospace;
-  font-size: 1.2em;
+  font-size: 1em;
   margin-bottom: 2px;
   margin-top: 2px;
   text-align: center;
@@ -303,7 +303,12 @@ p.flags {
 
 .infojob {
   font-family: monospace;
-  font-size: 1.2em;
+  font-size: 1em;
+}
+
+.lieu {
+  font-family: monospace;
+  font-size: 0.8em;
 }
 
 .titreJob {
@@ -313,7 +318,7 @@ p.flags {
 
 .infoJeu {
   font-family: monospace;
-  font-size: 1.2em;
+  font-size: 1em;
   margin-bottom: 2px;
   margin-top: 2px;
   text-align: center;
@@ -328,7 +333,7 @@ p.flags {
   font-family: monospace;
   margin-top: 2px;
   margin-bottom: 2px;
-  font-size: 1.2em;
+  font-size: 1em;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 5px;
@@ -345,7 +350,7 @@ p.flags {
 
 .infolast {
   font-family: monospace;
-  font-size: 1.2em;
+  font-size: 1em;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 5px;
