--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -420,17 +420,6 @@ nav {
   color: white;
   text-align: center;
   font-family: "ibm";
-  margin: 0.3em;
-}
-
-h2,
-h5 {
-  margin-bottom: 0.5em;
-  margin-top: 1em;
-}
-
-.twitter-follow-button {
-  margin: 1em;
 }
 
 nav ul {
@@ -473,6 +462,7 @@ a {
   margin-bottom: 10px;
   background: transparent;
   border: 1px solid white;
+  font-size: 0.5em;
 }
 
 .css3but:hover {
