--- a/public/cv.pug
+++ b/public/cv.pug
@@ -87,24 +87,25 @@ append content
             h3.titreH2.spanish Experiencia profesional
             .jobs
               h3.titreH3.french Developpeur logiciel IBM i
-              h3.titreH3.english IBM i programmer
+              h3.titreH3.english IBM i developer
               .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi)
               .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi)
               .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi)
-              span 04/08/2019 => 17/07/2020:  Pro A Pro, Montauban
+              .lieu 04/08/2019 => 17/07/2020:  Pro A Pro, Montauban
             .jobs
               h3.titreH3.french Ingenieur etude et developpement IBM i
               h3.titreH3.english IBM i software engineer
               .infojob.french Développement sur IBM i (CL, SQL, RPG, arcad, Rdi)
               .infojob.english IBM i Developer (CL, SQL, RPG, arcad, Rdi)
               .infojob.spanish IBM i Developer (CL, SQL, RPG, arcad, Rdi)
-              span 04/02/2019 => 04/08/2019: OCSI, Paris I
+              .lieu 04/02/2019 => 04/08/2019: OCSI, Paris I
+              .lieu (certification IBM et période essai proApro)
             .jobs
               h3.titreH3 Webmaster
               .infojob.french Mise &agrave; jour de la base de donn&eacute;es site Ecommerce (magento)
               .infojob.english Update of the Ecommerce website database (magento)
               .infojob.spanish Actualización de la base de datos del sitio snow-concept.com (magento)
-              span 06/12/2016 => 16/01/2017: www.snow-concept.com, l'Alpe d'Huez
+              .lieu 06/12/2016 => 16/01/2017: www.snow-concept.com, l'Alpe d'Huez
             .jobs
               h3.titreH3.french Technicien audio-visuel
               .infojob.french Accessoiriste: JLA productions, Martigues
@@ -118,7 +119,7 @@ append content
               .infojob.spanish gerente de apoyos: JLA productions, Martigues
               .infojob.spanish Subgerente: Auteurs Associ&eacute;s, Grasse
               .infojob.spanish Refuerzo de decoración y figuración: Gazelle Cie, DEMD, Europacorp, Marseille
-              span 2013 => 2015 
+              .lieu 2013 => 2015 
             .jobs
               h3.titreH3.french Dessinateur Projeteur HVAC
               .infojob.french Etude des projets de construction ERP &quot;Castorama&quot; Toulouse Union et Antibes
@@ -126,8 +127,8 @@ append content
               .infojob.english Study of construction projects ERP "Castorama" Toulouse union and Antibes
               h3.titreH3.spanish Diseñador de HVAC
               .infojob.spanish Estudio de proyectos de construcción de tiendas "Castorama" Toulouse Union y Antibes, ingeniería AUXITEC, Hyères
-              span.english 09/2012 => 12/2012: AUXITEC engineering, Hyères
-              span.french 09/2012 => 12/2012: AUXITEC ing&eacute;nierie, Hy&egrave;res
+              .lieu.english 09/2012 => 12/2012: AUXITEC engineering, Hyères
+              .lieu.french 09/2012 => 12/2012: AUXITEC ing&eacute;nierie, Hy&egrave;res
             .jobs
               h3.titreH3.french Developpeur PHP HTML CSS
               .infojob.french Introduction &agrave; JavaScript (JQuery) www.stand-service.com
@@ -135,7 +136,7 @@ append content
               .infojob.english Introduction to JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde
               h3.titreH3.spanish Desarrollador PHP CSS HTML
               .infojob.spanish introducción a JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde
-              span 03/2012 => 06/2012:  Alphabet Stand Service, La Garde
+              .lieu 03/2012 => 06/2012:  Alphabet Stand Service, La Garde
             .jobs
               h3.titreH3.french Technicien etudes en Design et Decoration
               .infojob.french Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;)
@@ -143,7 +144,7 @@ append content
               .infojob.english Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;)
               h3.titreH3.spanish Técnico de Diseño y Decoración
               .infojob.spanish Alphabet Stand Service (MIPCOM/MIPTV, MIDEM, FIF&mldr;)
-              span 09/2010 => 06/2012: La Garde
+              .lieu 09/2010 => 06/2012: La Garde
             .jobs
               h3.titreH3.french Vendeur et Technicien Ski
               .infojob.french Nevada Sports
@@ -151,7 +152,7 @@ append content
               .infojob.english Nevada Sports
               h3.titreH3.spanish Vendedor de esquí y de material deportivo
               .infojob.spanish Nevada Sports
-              span 12/2008 => 04/2009: l&rsquo;Alpe d&rsquo;Huez 
+              .lieu 12/2008 => 04/2009: l&rsquo;Alpe d&rsquo;Huez 
             .jobs
               h3.titreH3.french Technicien ADSL
               .infojob.french British Telecom Critical Systems
@@ -159,7 +160,7 @@ append content
               .infojob.english British Telecom Critical Systems
               h3.titreH3.spanish Técnico de ADSL
               .infojob.spanish British Telecom Critical Systems
-              span 07/2008 => 12/2008: Le Plessis-Robinson
+              .lieu 07/2008 => 12/2008: Le Plessis-Robinson
             .jobs
               h3.titreH3.french Technicien Ski et Snowboard
               .infojob.french Intersport
@@ -167,7 +168,7 @@ append content
               .infojob.english Intersport
               h3.titreH3.spanish Técnico de esquí y snowboard
               .infojob.spanish Intersport
-              span 12/2007 => 04/2008: l&rsquo;Alpe d&rsquo;Huez
+              .lieu 12/2007 => 04/2008: l&rsquo;Alpe d&rsquo;Huez
             .jobs
               h3.titreH3.french Technicien systemes et Administrateur reseaux microsoft
               h3.titreH3.english Systems technician and Microsoft Network Administrator 
@@ -175,7 +176,7 @@ append content
               .infojob.french Administration serveurs Windows et clients GNU/LINUX Maintenance et installation systemes informatique Developpement html php (script de backup)
               .infojob.english Windows server administration and GNU / LINUX clients Maintenance and installation of computer systems, html php development (backup script)
               .infojob.spanish Administración de servidores Windows y clientes GNU / LINUX Mantenimiento e instalación de sistemas infojobrmáticos, desarollamiento html php (script de copia de seguridad)
-              span 09/2005 => 06/2007: SECOB, St Jean-de-la-Ruelle
+              .lieu 09/2005 => 06/2007: SECOB, St Jean-de-la-Ruelle
             .jobs
               h3.titreH3.french Technicien Systemes et Reseaux
               h3.titreH3.english Systems and Networks Technician
@@ -183,7 +184,7 @@ append content
               .infojob.french Maintenance et installation systemes informatique Developpement html php d&apos;un site de devis securis&eacute;
               .infojob.english Maintenance and installation of computer systems PHP html development of a secured quote site Emergence
               .infojob.spanish Mantenimiento e instalación de sistemas infojobrmáticos PHP html desarrollo de un sitio de cotizaciones seguras
-              span 03/2005 => 06/2005: Emergence, Orléans
+              .lieu 03/2005 => 06/2005: Emergence, Orléans
             .jobs
               h3.titreH3.french Adjoint au responsable de magasin
               h3.titreH3.english Assistant to the store manager
@@ -191,7 +192,7 @@ append content
               .infojob.french Micromania
               .infojob.english Micromania
               .infojob.spanish Micromania
-              span 06/2003 => 02/2004: St Jean de la Ruelle
+              .lieu 06/2003 => 02/2004: St Jean de la Ruelle
             .jobs
               h3.titreH3.french Emplois etudiant
               .infojob.french Conseiller de vente en espace culturel Leclerc, serveur/barman, Ouvrier boulanger, Employ&eacute; polyvalent chez Intermarch&eacute;
@@ -214,7 +215,7 @@ append content
               .infojob.french Webservices for IBM i series
               .infojob.english Webservices for IBM i series
               .infojob.spanish Webservices for IBM i series
-              span 2018 OCSI Paris I
+              .lieu 2018 OCSI Paris I
             .jobs
               h3.titreH3.french Developpeur JavaScript FullStack
               h3.titreH3.english FullStack Javascript Developer
@@ -228,7 +229,7 @@ append content
               .infojob.french Cr&eacute;ation d&apos;applications web et mobiles riche backend JS
               .infojob.english Creating rich web and mobile applications backend JS
               .infojob.spanish Creación de aplicaciones web y móviles ricas en el back-end de JS
-              span 2017 IFOCOP Paris XI
+              .lieu 2017 IFOCOP Paris XI
             .jobs
               h3.titreH3.french TP de technicien etude en batiment option dessin
               h3.titreH3.english Construction Engineer Technician Drawing Option
@@ -240,7 +241,7 @@ append content
               .infojob.french Notions d&apos;urbanisme et de voirie
               .infojob.english Notions of town planning and roads
               .infojob.spanish Nociones de urbanismo y carreteras
-              span 2009 AFPA La Valette-du-var
+              .lieu 2009 AFPA La Valette-du-var
             .jobs
               h3.titreH3 DUT informatique genie logiciel
               .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
@@ -252,7 +253,7 @@ append content
               .infojob.spanish Sistemas y Redes: Red de administración e implementación de sistemas en entorno Linux, nociones de ensamblador regexp        
               .infojob.spanish Base de Datos: Análisis (merise), diseño (MCD, MCT), mantenimiento
               .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
-              span 2003 IUT d'Orléans
+              .lieu 2003 IUT d'Orléans
             .jobs
               h3.titreH3.french Baccalaureat Scientifique
               h3.titreH3.english Scientific Baccalaureate Diploma
@@ -260,14 +261,11 @@ append content
               .infojob.french Sp&eacute;cialit&eacute; physique-chimie
               .infojob.english Specialty physics-chemistry
               .infojob.spanish Especialidad física-química
-              span 2001 Orléans
+              .lieu 2001 Orléans
           .competen#complementaire
             .infojob.french Permis : auto, moto.
-              img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
             .infojob.english Driving licences: car, motorcycle.
-              img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
             .infojob.spanish Permiso: auto, motocicleta.
-              img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
             .infojob.french Sports: 
               | gym, sports de glisse, VTT.
             .infojob.english Sports: gym, board sports, mountain biking.
