--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -202,6 +202,7 @@ a {
     margin-right: auto;
     margin-top: 60px;
     margin-bottom: 60px;
+    max-width: 800px;
 }
 
 .m0ncentrageParafoot {
